refactor: migrate java 8 to java 11
Co-authored-by: Moderne <team@moderne.io>